--- a/notebook/preprocessing_ml.ipynb
+++ b/notebook/preprocessing_ml.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Load the dataset\n",
-    "df = pd.read_csv('Cleaned_2.csv')"
+    "df = pd.read_csv('..\\data\\Cleaned_2.csv')"
    ]
   },
   {
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ygale\\AppData\\Local\\Temp\\ipykernel_12428\\2657092176.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ygale\\AppData\\Local\\Temp\\ipykernel_4712\\2657092176.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['state_construction'] = df.state_construction.replace({\n"
      ]
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ygale\\AppData\\Local\\Temp\\ipykernel_12428\\1358846848.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ygale\\AppData\\Local\\Temp\\ipykernel_4712\\1358846848.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['epc'] = df['epc'].replace({\n"
      ]
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,16 +1636,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(28744, 15)"
+       "(28744, 27)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1960,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1972,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
        "state_construction  0.273651            1.000000  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2142,16 +2142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['district', 'price', 'state_construction', 'living_area', 'bedrooms',\n",
-      "       'bathrooms', 'has_garden', 'kitchen', 'fireplace', 'swimmingpool',\n",
-      "       'has_terrace', 'has_attic', 'has_basement', 'epc', 'area_total'],\n",
+      "Index(['id', 'city', 'postal_code', 'district', 'province', 'price', 'subtype',\n",
+      "       'state_construction', 'living_area', 'terrace_area', 'garden_area',\n",
+      "       'rooms', 'bedrooms', 'bathrooms', 'livingroom_surface',\n",
+      "       'kitchen_surface', 'facades', 'has_garden', 'kitchen', 'fireplace',\n",
+      "       'swimmingpool', 'has_terrace', 'has_attic', 'has_basement',\n",
+      "       'construction_year', 'epc', 'area_total'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -2266,9 +2269,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 10\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Define the features and the target\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprice\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     11\u001b[0m y \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprice\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Define the categorical columns that need to be encoded\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -3515,6 +3530,38 @@
    ],
    "source": [
     "forest.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'forest' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Predict on the test set\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m \u001b[43mforest\u001b[49m\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Plotting\u001b[39;00m\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'forest' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict on the test set\n",
+    "y_pred = forest.predict(X_test)\n",
+    "\n",
+    "# Plotting\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(y_test, y_pred, alpha=0.3)\n",
+    "plt.plot([y_test.min(), y_test.max()], [y_test.min(),\n",
+    "         y_test.max()], 'k--', lw=4)  # Diagonal line\n",
+    "plt.xlabel('Actual')\n",
+    "plt.ylabel('Predicted')\n",
+    "plt.title('Actual vs. Predicted Values')\n",
+    "plt.show()"
    ]
   },
   {
